[package]
name = "demon"
version = "0.1.0"
authors = ["ahmed <ahmedkorrim@gmail.com>" ,"Shady <shekohex@gmail.com>"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta="0.7.0"
async-std={version="1.6.2" , features=["attributes" ]}
#tokio={version="0.2.21" ,features=["macros" , "tcp" , "rt-core" , "stream" , "io-util" ]}
futures_codec="0.4.1"
bytes="0.5.5"
futures="0.3.5"
wireboard={path="../wireboard"}
